--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
             </div>
         </section>
 
-        <section class="porfolio-example">
+        <section class="portfolio-example">
             <div class="container">
-                <div class="porfolio-example__description">
-                    <h2 class="porfolio-example__description___title">Diversify your portfolio.</h2>
-                    <p class="porfolio-example__description__content">
+                <div class="portfolio-example__description">
+                    <h2 class="portfolio-example__description___title">Diversify your portfolio.</h2>
+                    <p class="portfolio-example__description__content">
                         Create an even more impressive portfolio by creating
                         case studies for your project. Simply follow our 
                         step<span aria-hidden="true">-</span>by<span aria-hidden="true">-</span>step guide.
                     </p>
                     <a href="#" class="default-btn --bg-white">Start Free Trial</a>
                 </div>
-                <div class="porfolio-example__illustration">
+                <div class="portfolio-example__illustration">
                     <img src="assets/PageImage.png" alt="" role="presentation">
                 </div>
             </div>
