sing up mobile version created

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="navbar__item"><a href="#">Pricing</a></li>
                     <li class="navbar__item"><a href="#">Features</a></li>
                     <li class="navbar__item"><a href="#" class="default-btn">Sing In</a></li>
-                    <li class="navbar__item"><a href="#" class="default-btn --bg-blue">Sing Up</a></li>
+                    <li class="navbar__item"><a href="singup.html" class="default-btn --bg-blue">Sing Up</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,7 +44,7 @@
                     With Fiber, you can setup your own personal portfolio in minutes
                     with dozens of premade, beatiful templates.
                 </p>
-                <a href="#" class="default-btn --bg-blue">Start Free Trial</a>
+                <a href="singup.html" class="default-btn --bg-blue">Start Free Trial</a>
                 <a href="#" class="default-link">View Examples</a>
                 <p class="hero__introduction___advantages">
                     <svg class="icon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -110,7 +110,7 @@
                         case studies for your project. Simply follow our 
                         step<span aria-hidden="true">-</span>by<span aria-hidden="true">-</span>step guide.
                     </p>
-                    <a href="#" class="default-btn --bg-white">Start Free Trial</a>
+                    <a href="singup.html" class="default-btn --bg-white">Start Free Trial</a>
                 </div>
                 <div class="portfolio-example__illustration">
                     <img src="assets/PageImage.png" alt="" role="presentation">
@@ -199,7 +199,7 @@
                 <h2 class="main-footer__section___title">Sitemap</h2>
                 <nav aria-label="Site menu navigation">
                     <ul class="main-footer__list">
-                        <li><a href="#" class="main-footer__list-item">Homepage</a></li>
+                        <li><a href="index.html" class="main-footer__list-item">Homepage</a></li>
                         <li><a href="#" class="main-footer__list-item">Pricing</a></li>
                         <li><a href="#" class="main-footer__list-item">Testimonials</a></li>
                         <li><a href="#" class="main-footer__list-item">Features</a></li>
