responsive until 992px

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             </button>
             <nav class="navbar" aria-label="Main menu" id="main-nav" aria-polite="assertive">
                 <ul class="navbar__list">
-                    <li class="navbar__item"><a href="#">Community</a></li>
+                    <li class="navbar__item ml-auto"><a href="#">Community</a></li>
                     <li class="navbar__item"><a href="#">Pricing</a></li>
                     <li class="navbar__item"><a href="#">Features</a></li>
-                    <li class="navbar__item"><a href="#" class="default-btn">Sing In</a></li>
+                    <li class="navbar__item ml-auto"><a href="#" class="default-btn">Sing In</a></li>
                     <li class="navbar__item"><a href="singup.html" class="default-btn --bg-blue">Sing Up</a></li>
                 </ul>
             </nav>
@@ -39,6 +39,10 @@
         <div class="container">
             <img src="assets/hero-Illustration.png" alt="" role="presentation" class="hero__illustration">
             <section class="hero__introduction">
+                <div class="classification" aria-label="ranking classification">
+                    <span class="classification__stars" aria-hidden="true"></span>    
+                    <p>Rated 4.8/5 (243 reviews)</p>
+                </div>
                 <h2 class="hero__introduction___title">Create your portfolio in minutes.</h2>
                 <p class="hero__introduction___content">
                     With Fiber, you can setup your own personal portfolio in minutes
@@ -46,18 +50,20 @@
                 </p>
                 <a href="singup.html" class="default-btn --bg-blue">Start Free Trial</a>
                 <a href="#" class="default-link">View Examples</a>
-                <p class="hero__introduction___advantages">
-                    <svg class="icon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z" fill="#45B19E"/>
-                    </svg>
-                    No Credit Card Required
-                </p>
-                <p class="hero__introduction___advantages">
-                    <svg class="icon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z" fill="#45B19E"/>
-                    </svg>
-                    10 Free templates
-                </p>
+                <div class="hero__introduction___advantages">
+                    <p>
+                        <svg class="icon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z" fill="#45B19E"/>
+                        </svg>
+                        No Credit Card Required
+                    </p>
+                    <p>
+                        <svg class="icon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM10.75 17.292L6.25 12.928L8.107 11.07L10.75 13.576L16.393 7.792L18.25 9.649L10.75 17.292Z" fill="#45B19E"/>
+                        </svg>
+                        10 Free templates
+                    </p>
+                </div>
             </section>
         </div>
     </div>
@@ -190,7 +196,8 @@
                 <p class="main-footer__section___content">
                     With Fiber, you can setup your own personal portfolio in minutes with
                     dozens of premade, beatiful templates.
-                    <br>
+                </p>
+                <p class="main-footer__section___content">
                     Made with <span class="sr-only">love</span> <span aria-hidden="true">&#10084;</span>
                     in the Netherlands.
                 </p>
