sing up page responsive done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Responsive landing page with mobile first workflow using HTML CSS and JS</title>
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
     <header class="top-header">
