singup carousel done, hover effects init

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
             <h1 class="logo">
                 <a href="index.html">Fiber</a>
             </h1>
-            <button class="nav-btn default-btn" aria-controls="main-nav" aria-live="true">
+            <button class="nav-btn default-btn" aria-controls="main-nav" aria-expanded="true">
                 <span class="sr-only">Menu</span>
                 <svg class="icon" aria-hidden="true" width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M24 4H0V0H24V4ZM24 8H0V12H24V8ZM24 16H0V20H24V16Z" fill="black"/>
                 </svg>  
             </button>
-            <nav class="navbar" aria-label="Main menu" id="main-nav" aria-polite="assertive">
+            <nav class="navbar --active" aria-label="Main menu" id="main-nav" aria-polite="assertive">
                 <ul class="navbar__list">
-                    <li class="navbar__item ml-auto"><a href="#">Community</a></li>
-                    <li class="navbar__item"><a href="#">Pricing</a></li>
-                    <li class="navbar__item"><a href="#">Features</a></li>
-                    <li class="navbar__item ml-auto"><a href="#" class="default-btn">Sing In</a></li>
+                    <li class="navbar__item ml-auto"><a href="#" class="link">Community</a></li>
+                    <li class="navbar__item"><a href="#" class="link">Pricing</a></li>
+                    <li class="navbar__item"><a href="#" class="link">Features</a></li>
+                    <li class="navbar__item ml-auto"><a href="#" class="link">Sing In</a></li>
                     <li class="navbar__item"><a href="singup.html" class="default-btn --bg-blue">Sing Up</a></li>
                 </ul>
             </nav>
@@ -207,10 +207,10 @@
                 <h2 class="main-footer__section___title">Sitemap</h2>
                 <nav aria-label="Site menu navigation">
                     <ul class="main-footer__list">
-                        <li><a href="index.html" class="main-footer__list-item">Homepage</a></li>
-                        <li><a href="#" class="main-footer__list-item">Pricing</a></li>
-                        <li><a href="#" class="main-footer__list-item">Testimonials</a></li>
-                        <li><a href="#" class="main-footer__list-item">Features</a></li>
+                        <li><a href="index.html" class="main-footer__list-item ">Homepage</a></li>
+                        <li><a href="#" class="main-footer__list-item " >Pricing</a></li>
+                        <li><a href="#" class="main-footer__list-item ">Testimonials</a></li>
+                        <li><a href="#" class="main-footer__list-item ">Features</a></li>
                     </ul>
                 </nav>
             </section>
@@ -218,10 +218,10 @@
                 <h2 class="main-footer__section___title">Resources</h2>
                 <nav aria-label="Resources menu navigation">
                     <ul class="main-footer__list">
-                        <li><a href="#" class="main-footer__list-item">Support</a></li>
-                        <li><a href="#" class="main-footer__list-item">Contact</a></li>
+                        <li><a href="#" class="main-footer__list-item ">Support</a></li>
+                        <li><a href="#" class="main-footer__list-item ">Contact</a></li>
                         <li>
-                            <a href="#" class="main-footer__list-item">
+                            <a href="#" class="main-footer__list-item ">
                                 <abbr title="Frequent asked questions">FAQ</abbr>
                             </a>
                         </li>
@@ -232,9 +232,9 @@
                 <h2 class="main-footer__section___title">Company</h2>
                 <nav aria-label="Company menu navigation">
                     <ul class="main-footer__list">
-                        <li><a href="#" class="main-footer__list-item">About</a></li>
-                        <li><a href="#" class="main-footer__list-item">Customers</a></li>
-                        <li><a href="#" class="main-footer__list-item">Blog</a></li>
+                        <li><a href="#" class="main-footer__list-item ">About</a></li>
+                        <li><a href="#" class="main-footer__list-item ">Customers</a></li>
+                        <li><a href="#" class="main-footer__list-item ">Blog</a></li>
                     </ul>
                 </nav>
             </section>
@@ -242,9 +242,9 @@
                 <h2 class="main-footer__section___title">Portfolios</h2>
                 <nav aria-label="Portfolios menu navigation">
                     <ul class="main-footer__list">
-                        <li><a href="#" class="main-footer__list-item">Sarah Andrews</a></li>
-                        <li><a href="#" class="main-footer__list-item">Mathew Higgins</a></li>
-                        <li><a href="#" class="main-footer__list-item">Janice Dave</a></li>
+                        <li><a href="#" class="main-footer__list-item ">Sarah Andrews</a></li>
+                        <li><a href="#" class="main-footer__list-item ">Mathew Higgins</a></li>
+                        <li><a href="#" class="main-footer__list-item ">Janice Dave</a></li>
                     </ul>
                 </nav>
             </section>
