--- a/singup.html
+++ b/singup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us" class="--h-100">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="js/singup.js" defer></script>
 </head>
-<body class="--h-100">
+<body>
     <section class="singup-container" aria-label="sing up section">
         <section class="form-container">
             <h1 class="logo">
