--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="keywords" content="landing page, responsive, mobile first, fiber, codewell challenge, html, css, javascript, js">
     <meta name="description" content="A responsive, mobile first landing page built named Fiber, built with HTML, CSS and Javascript according to Codewell challenge">
     <title>Responsive landing page with mobile first workflow using HTML CSS and JS</title>
+    <meta name="og:title" content="Fiber landing page">
+    <meta name="og:url" content="https://fiber-landingpage.netlify.app/">
+    <meta name="og:image" content="https://freeimage.host/i/YkoS87">
+    <meta name="og:description" content="A responsive mobile first landing page built using HTML5, CSS3 and Javascript">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js" defer></script>
