meta og image update

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:site_name" content="Fiber">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://fiber-landingpage.netlify.app/">
-    <meta property="og:image" content="https://freeimage.host/i/YkoS87">
-    <meta property="og:description" content="A responsive mobile first landing page built using HTML5, CSS3 and Javascript">
+    <meta property="og:image" content="https://freeimage.host/i/YkIZF4">
+    <meta property="og:description" content="A responsive landing page built according to a Codewell's challenge. The website was built using HTML5, CSS3 and Javascript only. Mobile first workflow.">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js" defer></script>
